--- a/requirements.txt
+++ b/requirements.txt
@@ -1,82 +1,20 @@
-aiohttp==3.8.3
-aiosignal==1.3.1
-altgraph==0.17.2
-asgiref==3.7.2
-async-timeout==4.0.2
-attrs==22.1.0
-Babel==2.12.1
-blinker==1.6.2
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
-colorama==0.4.5
-contourpy==1.2.0
+asgiref==3.8.1
+beautifulsoup4==4.12.3
+certifi==2024.6.2
+charset-normalizer==3.3.2
 crispy-bootstrap5==2023.10
-customtkinter==5.0.3
-cycler==0.11.0
-darkdetect==0.8.0
-discord.py==2.1.0
-Django==4.2.6
+Django==4.2.7
+django-allauth==0.63.3
+django-bootstrap-v5==1.0.11
+django-bootstrap5==23.4
 django-crispy-forms==2.1
-django-phonenumber-field==7.3.0
-django-rest==0.8.7
-django-taggit==5.0.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.14.0
-dnspython==2.3.0
-docutils==0.19
-et-xmlfile==1.1.0
-Faker==24.3.0
-Flask==2.3.2
-Flask-PyMongo==2.3.0
-Flask-WTF==1.1.1
-fonttools==4.28.5
-frozenlist==1.3.3
-future==0.18.2
-gTTS==2.2.4
-gunicorn==21.2.0
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.3.2
-Kivy==2.1.0
-kivy-deps.angle==0.3.2
-kivy-deps.glew==0.3.1
-kivy-deps.sdl2==0.4.5
-Kivy-Garden==0.1.5
-kiwisolver==1.4.5
-libretranslatepy==2.1.1
-lxml==4.9.1
-MarkupSafe==2.1.3
-matplotlib==3.8.2
-multidict==6.0.2
-mysql-connector-python==8.0.31
-numpy==1.22.0
-openpyxl==3.1.2
-packaging==21.3
-pandas==1.3.5
-pefile==2022.5.30
-phonenumbers==8.13.28
-Pillow==10.1.0
-pygame==2.1.2
-Pygments==2.13.0
-pyinstaller==5.4.1
-pyinstaller-hooks-contrib==2022.10
-pymongo==4.4.0
-pyparsing==3.0.6
-pypiwin32==223
-python-dateutil==2.8.2
+idna==3.7
 python-decouple==3.8
-pytz==2021.3
-pywin32==306
-pywin32-ctypes==0.2.0
-PyYAML==6.0
-requests==2.28.1
-scikit-learn==1.3.0
-setuptools==69.0.2
-six==1.16.0
-sqlparse==0.4.4
-tkcalendar==1.6.1
-tzdata==2023.3
-urllib3==2.2.1
-Werkzeug==3.0.1
+pytz==2024.1
+requests==2.32.3
+soupsieve==2.5
+sqlparse==0.5.0
+tzdata==2024.1
+urllib3==2.2.2
